--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
 }
 
 main{
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     align-items: center;
     background-color: hsl(185, 75%, 39%);
